# fuzzy-logic-controller

./: CMakeLists.txt
include/: FuzzyController.hpp  FuzzyLogicController.hpp  FuzzyRule.hpp  FuzzySet.hpp
src/: main.cpp
src/flc/: FuzzyController.cpp  FuzzyRule.cpp  FuzzySet.cpp
